Set divs on mobile to be a fixed amount of pixels for consistency. Added background colour to skill div and adjusted styling of images. Also fixed skills view on mobile.

--- a/style.css
+++ b/style.css
@@ -191,10 +191,9 @@ h3 {
 
 /* Skills div */
 #skills {
-	height:85vh;
+	height:780px;
 	position:relative;
-	/*background-color:black;*/
-	/*background-color:lightslategray;*/
+	background-color:#07223d;
 }
 
 h4 {
@@ -239,9 +238,11 @@ h4 {
 	*/
 }
 
+/* Portfolio div */
+#portfolio {
+	/* height:100vh; */
+}
 /* Work exp div */
-
-/* Side projects div */
 
 /* Contact me div */
 
@@ -298,7 +299,7 @@ h4 {
 	
 	/* About me div */
 	#aboutMe {
-		height:35svh;
+		height:330px;
 		/* 
 		TODO: set height to be larger for older mobile devices with smaller viewport heights
 		height:325px;
@@ -318,9 +319,6 @@ h4 {
 		width:85vw;
 	}
 	
-	#bioDiv {
-		
-	}
 	
 	#bioContainer {
 		flex-direction:column;
@@ -345,12 +343,13 @@ h4 {
 		font-size:20pt;
 		width:100vw;
 		padding-left:5vw;
+		margin-bottom:25px;
 	}
 	
 	.skillImage {
-		width:70px;
-		height:70px;
-		border: 3px solid #787878;
+		width:60px;
+		height:60px;
+		border: 4px solid #787878;
 		padding:15px;
 	}
 	
@@ -360,7 +359,7 @@ h4 {
 	}
 	
 	#skills {
-		height:60vh;
+		height:450px;
 	/* Work exp div */
 	
 	/* Side projects div */
